# schoolmarks

./: .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  Taskfile.yml
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  env.example  manage.py  openapi-schema.yml  pyproject.toml  schema.yml
api/common/: celery.py  permissions.py  schemas.py  users.py  utils.py
api/schoolmarksapi/: asgi.py  urls.py  wsgi.py
api/schoolmarksapi/admin/: __init__.py  assessment_admin.py  attendance_admin.py  checkin_session_admin.py  class_admin.py  course_admin.py  grade_admin.py  user_admin.py
api/schoolmarksapi/fixtures/: initial_data.json
api/schoolmarksapi/models/: __init__.py  assessment.py  attendance.py  attendance_detail.py  attendance_record.py  checkin_session.py  class_session.py  class_student.py  course.py  course_class_enrollment.py  course_enrollment.py  grade.py  school_class.py  student_grade.py  user.py
api/schoolmarksapi/serializers/: __init__.py  assessment_serializer.py  attendance_serializer.py  checkin_session_serializer.py  class_serializer.py  class_session_serializer.py  class_student_serializer.py  course_class_enrollment_serializer.py  course_serializer.py  grade_serializer.py  import_serializer.py  student_grade_serializer.py  user_serializer.py
api/schoolmarksapi/settings/: debug.py  dev.py  prod.py  settings.py
api/schoolmarksapi/tasks/: checkin_sessions.py  import_classes.py  import_courses.py  import_users.py
api/schoolmarksapi/views/: __init__.py  assessment_view.py  csrf.py  (+9 more)
(+175 files in other folders)
